Bug 1622900 - <input> text node children don't affect the directionality of the input. r=smaug

This was causing inconsistent directionality depending on the order of changes
between text content and input value.

Differential Revision: https://phabricator.services.mozilla.com/D67039

--HG--
extra : moz-landing-system : lando